--- a/app.json
+++ b/app.json
@@ -27,7 +27,7 @@
       [
         "react-native-google-mobile-ads",
         {
-          "androidAppId": "ca-app-pub-XXXXXXXXXXXXXXXX~XXXXXXXXXX",
+          "androidAppId": "ca-app-pub-9304319368230869~9134630271",
           "iosAppId": "ca-app-pub-9304319368230869~8745400425"
         }
       ]
