--- a/eas.json
+++ b/eas.json
@@ -6,22 +6,19 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal",
-      "prebuildCommand": "npx expo prebuild --clean"
+      "distribution": "internal"
     },
     "preview": {
       "distribution": "internal",
       "android": {
         "buildType": "apk"
-      },
-      "prebuildCommand": "npx expo prebuild --clean"
+      }
     },
     "production": {
       "autoIncrement": true,
       "android": {
         "buildType": "app-bundle"
-      },
-      "prebuildCommand": "npx expo prebuild --clean"
+      }
     }
   },
   "submit": {
