--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~54.0.30",
     "expo-font": "~14.0.11",
     "expo-linear-gradient": "~15.0.8",
+    "expo-navigation-bar": "~5.0.10",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
