--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "YKS ROTA",
     "slug": "comkayayksrota",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
@@ -30,7 +30,8 @@
           "androidAppId": "ca-app-pub-9304319368230869~9134630271",
           "iosAppId": "ca-app-pub-9304319368230869~8745400425"
         }
-      ]
+      ],
+      "react-native-iap"
     ],
     "extra": {
       "eas": {
