--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yks-koc",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -23,13 +23,16 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-google-mobile-ads": "^16.0.3",
+    "react-native-iap": "^14.7.12",
     "react-native-safe-area-context": "5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro": "^0.76.9",
+    "metro-config": "^0.76.9"
   },
   "private": true
 }
