--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,7 +16,6 @@ ENV['RCT_NEW_ARCH_ENABLED'] ||= '0' if podfile_properties['newArchEnabled'] == '
 ENV['EX_DEV_CLIENT_NETWORK_INSPECTOR'] ||= podfile_properties['EX_DEV_CLIENT_NETWORK_INSPECTOR']
 ENV['RCT_USE_RN_DEP'] ||= '1' if podfile_properties['ios.buildReactNativeFromSource'] != 'true' && podfile_properties['newArchEnabled'] != 'false'
 ENV['RCT_USE_PREBUILT_RNCORE'] ||= '1' if podfile_properties['ios.buildReactNativeFromSource'] != 'true' && podfile_properties['newArchEnabled'] != 'false'
-
 platform :ios, podfile_properties['ios.deploymentTarget'] || '15.1'
 
 prepare_react_native_project!
@@ -24,10 +23,10 @@ prepare_react_native_project!
 target 'YKSROTA' do
   use_expo_modules!
 
-  config_command = if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
-    ['node', '-e', "process.argv=['', '', 'config'];require('@react-native-community/cli').run()"]
+  if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
+    config_command = ['node', '-e', "process.argv=['', '', 'config'];require('@react-native-community/cli').run()"];
   else
-    [
+    config_command = [
       'node',
       '--no-warnings',
       '--eval',
@@ -47,13 +46,11 @@ target 'YKSROTA' do
 
   use_react_native!(
     :path => config[:reactNativePath],
-    :hermes_enabled => podfile_properties['expo.jsEngine'].nil? || podfile_properties['expo.jsEngine'] == 'hermes',
+    :hermes_enabled => podfile_properties['expo.jsEngine'] == nil || podfile_properties['expo.jsEngine'] == 'hermes',
+    # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/..",
     :privacy_file_aggregation_enabled => podfile_properties['apple.privacyManifestAggregationEnabled'] != 'false',
   )
-
-  # → Manuel olarak react-native-iap ekliyoruz
-  pod 'RNIap', :path => '../node_modules/react-native-iap'
 
   post_install do |installer|
     react_native_post_install(
