--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-google-mobile-ads": "^16.0.3",
-    "react-native-iap": "^8.2.0",
+    "react-native-iap": "^14.7.12",
+    "react-native-nitro-modules": "^0.33.9",
     "react-native-safe-area-context": "5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
@@ -31,8 +32,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "metro": "^0.76.9",
+    "metro": "^0.83.1",
     "metro-config": "^0.76.9"
   },
-  "private": true
+  "private": true,
+  "engines": {
+    "node": ">=20.0.0"
+  }
 }
